--- a/p/login.html
+++ b/p/login.html
@@ -3,10 +3,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="arquivos/login.css">
     <title>Login</title>
 </head>
 <body>
-    <h1>Em desenvolvimento</h1>
+    <header>
+        <div>
+            <img src="../arquivos/imagens/logo-header-claro.png" alt="logo-header">
+        </div>
+        <div>
+            <i class="material-icons">close</i>
+        </div>
+    </header>
+    <p id="aviso_desenv">PAGINA LOGIN EM DESENVOLVIMENTO</p>
+    <main>
+        <div id="login-content">
+            <form>
+                <h1>Log in</h1>
+                <p id="aviso-signin">Don't have an account? <a href="#">sign in</a></p>
+                <div id="box-icons">
+                    <div>
+                        <a href="#" target="_blank">
+                            Google
+                            <img src="../arquivos/imagens/login-img/google-icon.png" alt="icon-google">
+                        </a>
+                        <a href="#" target="_blank">
+                            Facebook
+                            <img src="../arquivos/imagens/login-img/facebook-icon.png" alt="icon-facebook">
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#" target="_blank">Github
+                            <img src="../arquivos/imagens/login-img/github-icon.png" alt="icon-github">
+                        </a>
+                        <a href="#" target="_blank">Feide
+                            <img src="../arquivos/imagens/login-img/feide-icon.png" alt="icon-feide">
+                        </a>
+                    </div>
+                </div>
+                <p id="or">OR</p>
+                <div id="input">
+                    <input id="email" type="email" placeholder="email">
+                    <input type="password" placeholder="password">
+                </div>
+                <div id="log">
+                    <a id="forgot">Forgot Password?</a>
+                    <a id="login">Log in</a>
+                </div>
+            </form>
+        </div>
+        <div id="msg-content">
+            <h1>
+                Become a
+                W3Schooler
+            </h1>
+            <h2>
+                Free to use, easy to love
+            </h2>
+            <p>Track your progress</p>
+            <p>Set your goals</p>
+            <p>Get a personalized learning path</p>
+            <p>Test your skills</p>
+            <p>Practice coding in browser</p>
+            <p>Build and host a website</p>
+            <p>Match with relevant jobs</p>
+        </div>
+    </main>
 </body>
 </html>
