fazendo o menu (ainda não terminei)

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="#">
                 <img id="logoHeader" src="arquivos/imagens/logo-header-claro.png" alt="logo-w3schools">
             </a>
-            <div class="ItensHeader" id="menu">
+            <div class="ItensHeader" id="menu" onclick="openMenu()">
                 <div>Menu</div>
                 <i class="material-icons">arrow_drop_down</i>
             </div>
@@ -70,6 +70,88 @@
                 </a>
             </form>
         </header>
+        <section id="SectionMenuItens">
+            <div id="menu-close-icon">
+                <div>
+                    <i class="material-icons" onclick="closeMenu()">close</i>
+                </div>
+            </div>
+            <div class="menuItensclass" id="menu-tutorials">
+                <div>
+                    <div>Tutorials</div>
+                    <i class="material-icons">arrow_drop_down</i>
+                </div>
+            </div>
+            <div class="menuItensclass" id="menu-exercises">
+                <div>
+                    <div>Exercises</div>
+                    <i class="material-icons">arrow_drop_down</i>
+                </div>
+            </div>
+            <div class="menuItensclass" id="menu-certificates">
+                <div>
+                    <div>Certificates</div>
+                    <i class="material-icons">arrow_drop_down</i>
+                </div>
+            </div>
+            <div class="menuItensclass" id="menu-services">
+                <div>
+                    <div>Services</div>
+                    <i class="material-icons">arrow_drop_down</i>
+                </div>
+            </div>
+            <div class="menuItensclass" id="menu-spaces">
+                <div>
+                    <div>Spaces</div>
+                    <i class="material-icons">arrow_drop_down</i>
+                </div>
+            </div>
+            <div class="menuItensclass" id="menu-get">
+                <div>
+                    <div>Get Certified</div>
+                    <i class="material-icons">arrow_drop_down</i>
+                </div>
+            </div>
+            <div class="menuItensclass" id="menu-plus">
+                <div>
+                    <div>Plus</div>
+                    <i class="material-icons">arrow_drop_down</i>
+                </div>
+            </div>
+            <div class="menuItensclass" id="menu-academy">
+                <div>
+                    <div>Academy</div>
+                    <i class="material-icons">arrow_drop_down</i>
+                </div>
+            </div>
+            <div id="menu-icons-redes">
+                <div>
+                    <a href="#">
+                        <img src="#" alt="youtube">
+                    </a>
+                </div>
+                <div>
+                    <a href="#">
+                        <img src="#" alt="linkedin">
+                    </a>
+                </div>
+                <div>
+                    <a href="#">
+                        <img src="#" alt="discord">
+                    </a>
+                </div>
+                <div>
+                    <a href="#">
+                        <img src="#" alt="facebook">
+                    </a>
+                </div>
+                <div>
+                    <a href="#">
+                        <img src="#" alt="instagram">
+                    </a>
+                </div>
+            </div>
+        </section>
         <div id="pos-header">
             <div class="pos-header-div">
                 <div><a href="#">HTML</a></div>
@@ -123,10 +205,10 @@
                 Este site foi um projeto que fiz para estudo em HTML, CSS e JavaScript.
             </p>
             <p>
-                Este site foi desenvolvido por <a href="https://github.com/faraotis">FARAOTIS</a>.<br>Visite Minha Página<a href="https://faraotis.github.io/home/">Home</a>.
+                Este site foi desenvolvido por <a href="https://github.com/faraotis" target="_parent">FARAOTIS</a>.<br>Visite Minha Página<a href="https://faraotis.github.io/home/" target="_parent">Home</a>.
             </p>
             <p id="site-oficial">
-                Visite o site oficial <a href="https://www.w3schools.com/">w3schools</a>.
+                Visite o site oficial <a href="https://www.w3schools.com/" target="_blank">w3schools</a>.
             </p>
         </div>
     </div>
