mudança no menu

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 </a>
             </form>
         </header>
-        <section id="SectionMenuItens">
+        <nav id="MenuItens">
             <div id="menu-close-icon">
                 <div>
                     <i class="material-icons" onclick="closeMenu()">close</i>
@@ -151,7 +151,7 @@
                     </a>
                 </div>
             </div>
-        </section>
+        </nav>
         <div id="pos-header">
             <div class="pos-header-div">
                 <div><a href="#">HTML</a></div>
